--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+.home_all_questions {
+  margin: auto;
+  border: 3px solid green;
+  width: 600px;
+}
