Fix placeholder and values.

--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -2,6 +2,6 @@
   <label for="question">Title</label>
   <input type="text" name="question[title]" placeholder="Think of a descriptive title">
   <label for="question">Question</label>
-  <textarea name="question[content]" rows="8" cols="80">Enter your question here. Be as descripive as possible.</textarea>
+  <textarea name="question[content]" rows="8" cols="80" placeholder="Enter your question here. Be as descripive as possible."></textarea>
   <input type="submit" name="submit" value="Post Question">
 </form>
