--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -3,6 +3,6 @@
     <label for="question">Title</label>
     <input type="text" name="question[title]" placeholder="Think of a descriptive title">
     <label for="question">Question</label>
-    <textarea name="question[content]" rows="8" cols="80">Enter your question here. Be as descripive as possible.</textarea>
+    <textarea name="question[content]" rows="8" cols="80"><%=@question.content%></textarea>
     <input type="submit" name="submit" value="Post Question">
 </form>
